--- a/videogames.html
+++ b/videogames.html
@@ -161,7 +161,7 @@
     <section class="grid">
 
       <article class="card">
-        <img class="cover" alt="Kingdom Hearts" src="https://m.media-amazon.com/images/M/MV5BZDk0NjdmM2UtZjg5OS00Nzc4LTgyN2UtYzRlNzAxZjY4ZTdmXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" alt="Kingdom Hearts" src="https://m.media-amazon.com/images/M/MV5BYTRiMjQ0OTUtMDczZi00ZGRkLWE0NmItMmZhMjVhNmM0ZjZmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Kingdom Hearts Franchise</div>
           <div class="by">Square Enix</div>
@@ -170,7 +170,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Jak and Daxter" src="https://m.media-amazon.com/images/M/MV5BMjBhNjA0MjUtZDRmNi00MDY1LThmODktZGFhYWFlYzk4NTQwXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" alt="Jak and Daxter" src="https://m.media-amazon.com/images/M/MV5BZjEwOGQ0OTAtOTU3YS00ZWQwLTgzODAtMGNkZTlkZjI0NzgzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -179,7 +179,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Hogwarts Legacy" src="https://m.media-amazon.com/images/M/MV5BZmYxNDQ0NzUtZGE5Zi00NWNiLTk4MzEtYjRlNTc1ZTdmYmI0XkEyXkFqcGdeQXVyMTY0Njc2MTUx._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" alt="Hogwarts Legacy" src="https://m.media-amazon.com/images/M/MV5BYmUxNjU3MzYtZDMxNS00MjlkLTllMWEtY2UwZGZiMDYzMTJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -188,16 +188,16 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Sonic Crossworlds" src="https://m.media-amazon.com/images/M/MV5BNzU5YTQ4NzctMzA4Ni00NzZkLWFkMzEtNDhhMjI0MTYyOWRjXkEyXkFqcGdeQXVyMTEzMjQ4NzEw._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" alt="Sonic X Shadow Generations" src="https://m.media-amazon.com/images/M/MV5BMjEyMzc1OTgtZWRlMC00YWQ3LTgwNTYtN2QzYjgyOWUyZWMwXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
-          <div class="game-title">Sonic Crossworlds</div>
+          <div class="game-title">Sonic X Shadow Generations</div>
           <div class="by">SEGA</div>
-          <p class="desc">Currently Playing: Fast-paced action and dimension-hopping adventures with the iconic blue hedgehog.</p>
+          <p class="desc">Currently Playing: Fast-paced action and dimension-hopping adventures with the iconic blue hedgehog and Shadow.</p>
         </div>
       </article>
 
       <article class="card">
-        <img class="cover" alt="Resident Evil 7" src="https://m.media-amazon.com/images/M/MV5BYmI4ZGNjYjYtMmI2Yy00MTMwLWFkNDQtZjg3YmRkZjA0ZmU0XkEyXkFqcGdeQXVyMTEzMjQ4NzEw._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" alt="Resident Evil 7" src="https://m.media-amazon.com/images/M/MV5BZTNjZmM1NjItMjFhOS00MWUwLWJjMTQtODM2MzNjY2YwMGI0XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -206,7 +206,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Little Nightmares 3" src="https://m.media-amazon.com/images/M/MV5BMzU1MTk0NjAtYTgzMy00ZjY0LThjZWUtNmRlZDllY2FlNmY0XkEyXkFqcGdeQXVyMTEwMTQ4MzU1._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" alt="Little Nightmares 3" src="https://m.media-amazon.com/images/M/MV5BMzA5MzA5NjYtMTUxYy00MmI5LTgwNzItOTE0ZDUyMjk1Y2ZhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Little Nightmares 3</div>
           <div class="by">Supermassive Games</div>
