--- a/videogames.html
+++ b/videogames.html
@@ -161,7 +161,8 @@
     <section class="grid">
 
       <article class="card">
-        <img class="cover" alt="Kingdom Hearts" src="https://m.media-amazon.com/images/M/MV5BYTRiMjQ0OTUtMDczZi00ZGRkLWE0NmItMmZhMjVhNmM0ZjZmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" loading="lazy" alt="Kingdom Hearts cover"
+             src="https://upload.wikimedia.org/wikipedia/en/8/85/Kingdom_Hearts.jpg"/>
         <div class="panel">
           <div class="game-title">Kingdom Hearts Franchise</div>
           <div class="by">Square Enix</div>
@@ -170,7 +171,8 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Jak and Daxter" src="https://m.media-amazon.com/images/M/MV5BZjEwOGQ0OTAtOTU3YS00ZWQwLTgzODAtMGNkZTlkZjI0NzgzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" loading="lazy" alt="Jak and Daxter: The Precursor Legacy cover"
+             src="https://m.media-amazon.com/images/M/MV5BZjEwOGQ0OTAtOTU3YS00ZWQwLTgzODAtMGNkZTlkZjI0NzgzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -179,7 +181,8 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Hogwarts Legacy" src="https://m.media-amazon.com/images/M/MV5BYmUxNjU3MzYtZDMxNS00MjlkLTllMWEtY2UwZGZiMDYzMTJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" loading="lazy" alt="Hogwarts Legacy cover"
+             src="https://upload.wikimedia.org/wikipedia/en/0/0a/Hogwarts_Legacy_cover_art.jpg"/>
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -187,17 +190,20 @@
         </div>
       </article>
 
+      <!-- REPLACED: Sonic x Shadow -> Sonic Racing: CrossWorlds -->
       <article class="card">
-        <img class="cover" alt="Sonic X Shadow Generations" src="https://m.media-amazon.com/images/M/MV5BMjEyMzc1OTgtZWRlMC00YWQ3LTgwNTYtN2QzYjgyOWUyZWMwXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" loading="lazy" alt="Sonic Racing: CrossWorlds art"
+             src="https://shared.cloudflare.steamstatic.com/store_item_assets/steam/apps/2486820/capsule_616x353.jpg"/>
         <div class="panel">
-          <div class="game-title">Sonic X Shadow Generations</div>
+          <div class="game-title">Sonic Racing: CrossWorlds</div>
           <div class="by">SEGA</div>
-          <p class="desc">Currently Playing: Fast-paced action and dimension-hopping adventures with the iconic blue hedgehog and Shadow.</p>
+          <p class="desc">Fast, dimension-hopping arcade racing across worlds with Sonic and friends, packed with crossovers and wild tracks.</p>
         </div>
       </article>
 
       <article class="card">
-        <img class="cover" alt="Resident Evil 7" src="https://m.media-amazon.com/images/M/MV5BZTNjZmM1NjItMjFhOS00MWUwLWJjMTQtODM2MzNjY2YwMGI0XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" loading="lazy" alt="Resident Evil 7: Biohazard cover"
+             src="https://upload.wikimedia.org/wikipedia/en/1/15/Resident_Evil_7_cover_art.jpg"/>
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -206,7 +212,8 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Little Nightmares 3" src="https://m.media-amazon.com/images/M/MV5BMzA5MzA5NjYtMTUxYy00MmI5LTgwNzItOTE0ZDUyMjk1Y2ZhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <img class="cover" loading="lazy" alt="Little Nightmares III cover/key art"
+             src="https://m.media-amazon.com/images/M/MV5BMzA5MzA5NjYtMTUxYy00MmI5LTgwNzItOTE0ZDUyMjk1Y2ZhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Little Nightmares 3</div>
           <div class="by">Supermassive Games</div>
