--- a/moviesshows.html
+++ b/moviesshows.html
@@ -216,7 +216,7 @@
           </div>
         </article>
 
-        <!-- Avatar: The Last Airbender (UNCHANGED) -->
+        <!-- Avatar: The Last Airbender -->
         <article class="card" data-genre="anime action">
           <img class="cover" alt="Avatar: The Last Airbender" loading="lazy"
                src="https://m.media-amazon.com/images/M/MV5BODc5YTBhMTItMjhkNi00ZTIxLWI0YjAtNTZmOTY0YjRlZGQ0XkEyXkFqcGdeQXVyODUwNjEzMzg@._V1_FMjpg_UX1000_.jpg"/>
@@ -230,7 +230,7 @@
         <!-- One Punch Man -->
         <article class="card" data-genre="anime action comedy">
           <img class="cover" alt="One Punch Man" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BMGMwMjI5YjItMTdhNy00MDQzLTk5MTQtMmJjYjFmZmFlYTI3XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+               src="https://m.media-amazon.com/images/M/MV5BZjJlNzE5YzEtYzQwYS00NTBjLTk5YzAtYzUwOWQyM2E3OGI2XkEyXkFqcGdeQXVyNTgyNTA4MjM@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">One Punch Man</div>
@@ -241,11 +241,11 @@
         <!-- IT: Welcome to Derry -->
         <article class="card" data-genre="horror">
           <img class="cover" alt="IT: Welcome to Derry" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BMTY5NjYwNDgtNGVlYS00YjA3LWIwNGMtODczMTA0NzY2NzJhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+               src="https://m.media-amazon.com/images/M/MV5BNDg3MmI1ZDYtNGYwOS00MzcyLTk3Y2UtYjk1Yzk5OGRhMTljXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
-            <div class="by">by HBO Max</div>
+            <div class="by">by HBO</div>
           </div>
         </article>
 
@@ -261,9 +261,9 @@
         </article>
 
         <!-- Bugonia -->
-        <article class="card" data-genre="drama scifi">
+        <article class="card" data-genre="drama scifi comedy">
           <img class="cover" alt="Bugonia" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BOTg5ZWE2NjktYTdlZi00ZTU4LThkODQtMjQ0ZjA4YzZhNGE4XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+               src="https://m.media-amazon.com/images/M/MV5BMTU2MTMzOTkxNF5BMl5BanBnXkFtZTcwNjU2NjU0OQ@@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Bugonia</div>
@@ -274,7 +274,7 @@
         <!-- Eight Legged Freaks -->
         <article class="card" data-genre="horror comedy action">
           <img class="cover" alt="Eight Legged Freaks" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BYjRhNjFhYzctYzViMi00NzljLThjMjQtNWIzY2I5YjFkOGVhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+               src="https://m.media-amazon.com/images/M/MV5BZTg1ZTU2OWEtMTY4Ny00ZGQzLWIzNmMtYWRjYTNmNzIxMTllXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
@@ -285,7 +285,7 @@
         <!-- Grandma's Boy -->
         <article class="card" data-genre="comedy">
           <img class="cover" alt="Grandma's Boy" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BMTI0NjYzOTY0Ml5BMl5BanBnXkFtZTcwODc0MTUzMQ@@._V1_FMjpg_UX1000_.jpg"/>
+               src="https://m.media-amazon.com/images/M/MV5BMTc0MDE2NTc2Ml5BMl5BanBnXkFtZTcwMDU3NTUzMQ@@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Grandma's Boy</div>
