--- a/videogames.html
+++ b/videogames.html
@@ -172,7 +172,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Jak and Daxter: The Precursor Legacy cover"
-             src="https://m.media-amazon.com/images/M/MV5BZjEwOGQ0OTAtOTU3YS00ZWQwLTgzODAtMGNkZTlkZjI0NzgzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+             src=""/>
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -182,7 +182,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Hogwarts Legacy cover"
-             src="https://upload.wikimedia.org/wikipedia/en/0/0a/Hogwarts_Legacy_cover_art.jpg"/>
+             src=""/>
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -190,10 +190,9 @@
         </div>
       </article>
 
-      <!-- REPLACED: Sonic x Shadow -> Sonic Racing: CrossWorlds -->
       <article class="card">
         <img class="cover" loading="lazy" alt="Sonic Racing: CrossWorlds art"
-             src="https://shared.cloudflare.steamstatic.com/store_item_assets/steam/apps/2486820/capsule_616x353.jpg"/>
+             src=""/>
         <div class="panel">
           <div class="game-title">Sonic Racing: CrossWorlds</div>
           <div class="by">SEGA</div>
@@ -203,7 +202,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Resident Evil 7: Biohazard cover"
-             src="https://upload.wikimedia.org/wikipedia/en/1/15/Resident_Evil_7_cover_art.jpg"/>
+             src=""/>
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -213,7 +212,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Little Nightmares III cover/key art"
-             src="https://m.media-amazon.com/images/M/MV5BMzA5MzA5NjYtMTUxYy00MmI5LTgwNzItOTE0ZDUyMjk1Y2ZhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+             src=""/>
         <div class="panel">
           <div class="game-title">Little Nightmares 3</div>
           <div class="by">Supermassive Games</div>
