Update game cover images in videogames.html

--- a/videogames.html
+++ b/videogames.html
@@ -172,7 +172,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Jak and Daxter: The Precursor Legacy cover"
-             src=""/>
+             src="https://m.media-amazon.com/images/M/MV5BZjEwOGQ0OTAtOTU3YS00ZWQwLTgzODAtMGNkZTlkZjI0NzgzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -182,7 +182,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Hogwarts Legacy cover"
-             src=""/>
+             src="https://m.media-amazon.com/images/M/MV5BZTUyZDM0MWMtOTYwMS00YTA0LWFjZGMtZGRhN2RjNzlkYTk3XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -191,8 +191,8 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Sonic Racing: CrossWorlds art"
-             src=""/>
+        <img class="cover" loading="lazy" alt="Sonic Racing: CrossWorlds cover"
+             src="https://m.media-amazon.com/images/M/MV5BMzRhYWU0YjUtNjNkOS00MGNlLTk2OTktNWY2NTQ2YjMyYjdmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Sonic Racing: CrossWorlds</div>
           <div class="by">SEGA</div>
@@ -202,7 +202,7 @@
 
       <article class="card">
         <img class="cover" loading="lazy" alt="Resident Evil 7: Biohazard cover"
-             src=""/>
+             src="https://m.media-amazon.com/images/M/MV5BYzY1NDM2OWQtNzBkYS00MWE3LTg4NTMtOTljNTM0YzJmOGVmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -211,8 +211,8 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Little Nightmares III cover/key art"
-             src=""/>
+        <img class="cover" loading="lazy" alt="Little Nightmares III cover"
+             src="https://m.media-amazon.com/images/M/MV5BMzA5MzA5NjYtMTUxYy00MmI5LTgwNzItOTE0ZDUyMjk1Y2ZhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Little Nightmares 3</div>
           <div class="by">Supermassive Games</div>
