Fix image source paths for video game covers
Updated image source paths for video game covers to point to the correct directory.

--- a/videogames.html
+++ b/videogames.html
@@ -34,7 +34,6 @@
       letter-spacing:.015em; text-transform:uppercase;
     }
 
-    /* Navigation bar */
     .navbar{
       position:sticky; top:0; inset-inline:0;
       width:100%; padding:14px clamp(16px,4vw,48px);
@@ -57,7 +56,6 @@
 
     .container{max-width:1200px;margin:0 auto;padding:20px}
 
-    /* Header like the reading page */
     .title-wrap{display:flex;align-items:center;gap:14px;margin-top:18px}
     .emoji{
       font-size:34px;
@@ -76,7 +74,6 @@
       font-size:clamp(14px,2.5vw,18px);
     }
 
-    /* Card grid like book tiles */
     .grid{
       margin-top:26px;
       display:grid;
@@ -125,7 +122,6 @@
       line-height:1.45;
     }
 
-    /* Responsive spacing similar to reference */
     @media (max-width:768px){
       .title-wrap{gap:10px}
       .emoji{font-size:30px}
@@ -134,7 +130,6 @@
   </style>
 </head>
 <body>
-  <!-- Navigation bar -->
   <nav class="navbar">
     <a class="brand nf" href="index.html#home" aria-label="Go to Home">Angel Contreras</a>
     <div class="navlinks" role="navigation" aria-label="Primary">
@@ -148,7 +143,6 @@
   </nav>
 
   <div class="container">
-    <!-- Header -->
     <div class="title-wrap">
       <div class="emoji">🎮</div>
       <h1>Video Games That Shaped My Journey</h1>
@@ -157,11 +151,10 @@
       These games have influenced my creativity, problem-solving, and love for interactive storytelling.
     </p>
 
-    <!-- Grid of "book-style" cards -->
     <section class="grid">
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Kingdom Hearts cover" src="images/vgpic1.JPG"/>
+        <img class="cover" loading="lazy" alt="Kingdom Hearts cover" src="/mnt/data/vgpic1.JPG"/>
         <div class="panel">
           <div class="game-title">Kingdom Hearts Franchise</div>
           <div class="by">Square Enix</div>
@@ -170,7 +163,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Jak and Daxter cover" src="images/vgpic2.JPG"/>
+        <img class="cover" loading="lazy" alt="Jak and Daxter cover" src="/mnt/data/vgpic2.JPG"/>
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -179,7 +172,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Hogwarts Legacy cover" src="images/vgpic3.JPG"/>
+        <img class="cover" loading="lazy" alt="Hogwarts Legacy cover" src="/mnt/data/vgpic3.JPG"/>
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -188,7 +181,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Sonic Racing: CrossWorlds cover" src="images/vgpic4.JPG"/>
+        <img class="cover" loading="lazy" alt="Sonic Racing: CrossWorlds cover" src="/mnt/data/vgpic4.JPG"/>
         <div class="panel">
           <div class="game-title">Sonic Racing: CrossWorlds</div>
           <div class="by">SEGA</div>
@@ -197,7 +190,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Resident Evil 7: Biohazard cover" src="images/vgpic5.JPG"/>
+        <img class="cover" loading="lazy" alt="Resident Evil 7: Biohazard cover" src="/mnt/data/vgpic5.JPG"/>
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -206,7 +199,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" loading="lazy" alt="Little Nightmares III cover" src="images/vgpic6.JPG"/>
+        <img class="cover" loading="lazy" alt="Little Nightmares III cover" src="/mnt/data/vgpic6.JPG"/>
         <div class="panel">
           <div class="game-title">Little Nightmares III</div>
           <div class="by">Supermassive Games</div>
