Update image source paths for game covers

--- a/videogames.html
+++ b/videogames.html
@@ -136,7 +136,7 @@
 
       <!-- 1. Kingdom Hearts -> vgpic1 -->
       <article class="card">
-        <img class="cover" alt="Kingdom Hearts cover" src="/mnt/data/vgpic1.JPG">
+        <img class="cover" alt="Kingdom Hearts cover" src="vgpic1.JPG">
         <div class="panel">
           <div class="game-title">Kingdom Hearts Franchise</div>
           <div class="by">Square Enix</div>
@@ -146,7 +146,7 @@
 
       <!-- 2. Jak & Daxter -> vgpic2 -->
       <article class="card">
-        <img class="cover" alt="Jak and Daxter cover" src="/mnt/data/vgpic2.JPG">
+        <img class="cover" alt="Jak and Daxter cover" src="vgpic2.JPG">
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -156,7 +156,7 @@
 
       <!-- 3. Hogwarts Legacy -> vgpic3 -->
       <article class="card">
-        <img class="cover" alt="Hogwarts Legacy cover" src="/mnt/data/vgpic3.JPG">
+        <img class="cover" alt="Hogwarts Legacy cover" src="vgpic3.JPG">
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
