Update image source paths for video game covers

--- a/videogames.html
+++ b/videogames.html
@@ -135,7 +135,7 @@
 
       <!-- 1. Kingdom Hearts -> vgpic1 -->
       <article class="card">
-        <img class="cover" alt="Kingdom Hearts cover" src="images/vgpic1.JPG">
+        <img class="cover" alt="Kingdom Hearts cover" src="vgpic1.JPG">
         <div class="panel">
           <div class="game-title">Kingdom Hearts Franchise</div>
           <div class="by">Square Enix</div>
@@ -145,7 +145,7 @@
 
       <!-- 2. Jak & Daxter -> vgpic2 -->
       <article class="card">
-        <img class="cover" alt="Jak and Daxter cover" src="images/vgpic2.JPG">
+        <img class="cover" alt="Jak and Daxter cover" src="vgpic2.JPG">
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -155,7 +155,7 @@
 
       <!-- 3. Hogwarts Legacy -> vgpic3 -->
       <article class="card">
-        <img class="cover" alt="Hogwarts Legacy cover" src="images/vgpic3.JPG">
+        <img class="cover" alt="Hogwarts Legacy cover" src="vgpic3.JPG">
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -165,7 +165,7 @@
 
       <!-- 4. Sonic Racing CrossWorlds -> vgpic4 -->
       <article class="card">
-        <img class="cover" alt="Sonic Racing: CrossWorlds cover" src="images/vgpic4.JPG">
+        <img class="cover" alt="Sonic Racing: CrossWorlds cover" src="vgpic4.JPG">
         <div class="panel">
           <div class="game-title">Sonic Racing: CrossWorlds</div>
           <div class="by">SEGA</div>
@@ -175,7 +175,7 @@
 
       <!-- 5. Resident Evil 7 -> vgpic5 -->
       <article class="card">
-        <img class="cover" alt="Resident Evil 7: Biohazard cover" src="images/vgpic5.JPG">
+        <img class="cover" alt="Resident Evil 7: Biohazard cover" src="vgpic5.JPG">
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -185,7 +185,7 @@
 
       <!-- 6. Little Nightmares III -> vgpic6 -->
       <article class="card">
-        <img class="cover" alt="Little Nightmares III cover" src="images/vgpic6.JPG">
+        <img class="cover" alt="Little Nightmares III cover" src="vgpic6.JPG">
         <div class="panel">
           <div class="game-title">Little Nightmares III</div>
           <div class="by">Supermassive Games</div>
@@ -196,7 +196,7 @@
       <!-- 7. NEW: Metal Gear Solid -->
       <article class="card">
         <!-- Replace the src path with the correct image path in your repo -->
-        <img class="cover" alt="Metal Gear Solid cover" src="images/metal-gear-solid.jpg">
+        <img class="cover" alt="Metal Gear Solid cover" src="metal-gear-solid.jpg">
         <div class="panel">
           <div class="game-title">Metal Gear Solid</div>
           <div class="by">Konami / Hideo Kojima</div>
